--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
 		</form>
 	</div>
 	<script src='/socket.io/socket.io.js' type='text/javascript'></script>
-	<script src='http://code.jquery.com/jquery-1.8.0.min.js' type='text/javascript'></script>
+	<script src='/javascripts/jquery-1.8.0.min.js' type='text/javascript'></script>
 	<script src='/javascripts/chat.js' type='text/javascript'></script>
 	<script src='/javascripts/chat_ui.js' type='text/javascript'></script>
 </body>
